20080630 rzx.c,sna.c: initialise error as it can be used unintialised (Fred).
20080701 csw.c,libspectrum.h.in,tap.c,tape.c,tape_block.[ch],tzx_read.c,
         tzx_write.c,warajevo_read.c,wav.c,z80em.c: various functions
         (notably tzx_write_bytes) could never fail but returned an error
         code anyway, which we faithfully checked through many levels of code.
         Stop doing this as it just makes the code less readable.
20080701 memory.c: allow calloc function to be changed.
20080717 make-perl.c,libspectrum.h.in: Win32: fix functions export for dll
	 (Marek).
20080821 sna.c: make 128Kb SNA files actually loadable again.
20080911 internals.h,libspectrum.{c,h.in},tape_block.c,test/test.c: add
	 function to get block length.
20080928 internals.h,tape.c,tape_block.[ch],test/test.c: extend timing support
         to raw data blocks, RLE pulse blocks and the block o' doom (Fred).
20081020 tape_block.c: remove warning.
20081021 sna.c,test/{empty.z80,test.c}: SP wasn't being decremented and
         could have been written to freed memory.
20081021 libspectrum.h.in,sna.c,tap.c,tzx_read.c,tzx_write.c,warajevo_read.c,
         z80.c: remove deprecated functions libspectrum_sna_read(),
         libspectrum_z80_read(),libspectrum_z80_write(),libspectrum_tap_read(),
         libspectrum_tap_write(),libspectrum_tzx_read(),
         libspectrum_tzx_write() and libspectrum_warajevo_read() (Fred).
20081021 libspectrum.h.in,rzx.c: add "automatic" flag to snapshots in RZX
	 files.
20081027 ChangeLog: bring up to date.
20081027 libspectrum.h.in: Win32: fixed dll export for
	 libspectrum_tape_block_length (Marek).
20081027 doc/libspectrum.txt: bring up to date.
20081027 README: haven't been using CVS for a while now.
20081108 doc/libspectrum.txt,libspectrum.c,libspectrum.h.in: allow for
	 identification of more disk images (part of patch #2233744)
	 (Gergely Szasz).
20081109 doc/cvs-tags: document 0.5.0 branch tag.