@@ -42,23 +42,25 @@ test_test_LDADD = libspectrum.la
 EXTRA_DIST += \
 	test/Makefile.am \
 	test/complete-tzx.pl \
-	test/empty.csw \
 	test/empty-drb.tzx \
-	test/invalid.gz \
-	test/invalid.szx \
-	test/invalid.tzx \
+	test/empty.csw \
+	test/empty.z80 \
 	test/invalid-archiveinfo.tzx \
 	test/invalid-custominfo.tzx \
 	test/invalid-gdb.tzx \
 	test/invalid-hardwareinfo.tzx \
 	test/invalid-warajevo-blockoffset.tap \
+	test/invalid.gz \
+	test/invalid.szx \
+	test/invalid.tzx \
 	test/jump.tzx \
 	test/loop.tzx \
 	test/loop2.tzx \
 	test/loopend.tzx \
 	test/sp-2000.sna.gz \
 	test/sp-ffff.sna.gz \
-	test/turbo-zeropilot.tzx
+	test/turbo-zeropilot.tzx \
+	test/writeprotected.mdr
 
 CLEANFILES += \
 	test/.libs/test \
